--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -4,7 +4,11 @@
     --magenta:hsl(300, 69%, 71%);
     --white:hsl(0, 0%, 100%);
 }
-
+body{
+    font-family: 'Open Sans', sans serif;
+    background-color: var(--violet);
+    margin:25px;
+}
 h1{
     color:var(--white);
     font-family: 'Poppins', sans-serif;
@@ -16,7 +20,7 @@ nav img{
     top:0;
     left:0;
     padding:30px;
-    width:9em;
+    width:11em;
 }
 #container{
     margin:50px;
@@ -24,11 +28,13 @@ nav img{
 
 button{
     font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
     background-color: var(--white);
     color:var(--violet);
     padding:13px;
     border-radius:50px;
     border:none;
+    box-shadow: 1px 3px 10px rgb(46, 46, 46);
    
 }
 button:hover{
@@ -74,8 +80,6 @@ i:hover{
     body{
         background-image:url("/src/images/bg-mobile.svg");
         background-repeat: no-repeat;  
-        font-family: 'Open Sans', sans serif;
-        background-color: var(--violet);
     }
     h1{
         font-size: 1.8em;
@@ -101,8 +105,6 @@ i:hover{
     body{
         background-image:url("/src/images/bg-mobile.svg");
         background-repeat: no-repeat;  
-        font-family: 'Open Sans', sans serif;
-        background-color: var(--violet);
         margin-bottom: 0px;
     }
     h1{
@@ -130,11 +132,9 @@ i:hover{
     body{
         background-image: url("/src/images/bg-desktop.svg");
         background-repeat: no-repeat;
-        font-family: 'Open Sans', sans serif;
-        background-color: var(--violet);
     }
     #img img{
-        width:100%;
+        width:90%;
     }
     h1{
         font-size: 2.6em;
