--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -91,7 +91,7 @@ i:hover{
         width:70%;
     }
     #img img{
-        width: 50%;
+        width: 5px;
     }
     #text{
         text-align: center;
