--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -76,7 +76,7 @@ i:hover{
     color: hsl(228, 45%, 44%);
 }
 
-@media screen and (min-width:360px) {
+@media screen and (max-width:700px) {
     body{
         background-image:url("/src/images/bg-mobile.svg");
         background-repeat: no-repeat;  
@@ -101,7 +101,7 @@ i:hover{
     }
    
 }
-@media screen and (min-width:700px) {
+@media screen and (max-width:1280px) {
     body{
         background-image:url("/src/images/bg-mobile.svg");
         background-repeat: no-repeat;  
