--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -101,7 +101,7 @@ i:hover{
     }
    
 }
-@media screen and (max-width:1280px) {
+@media screen and (min-width:700px) and (max-width:1280px) {
     body{
         background-image:url("/src/images/bg-mobile.svg");
         background-repeat: no-repeat;  
