--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -43,6 +43,9 @@ button:hover{
     transition: 0.3s;
     
 }
+ul{
+    padding-left:0;
+}
 ul li{
     display: inline;
     list-style-type: none;
